--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@ html.dark {
   --line-color: rgba(255, 255, 255, 0.2);
 }
 
+body {
+  word-break: break-word;
+}
+
 .borderBlack {
   @apply border border-black/10;
 }
